# OpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
docs/: CMakeLists_구조_비교.md  OpenGL_입문_설명.md  새_프로젝트_가이드.md  좌표계_개념.md
src/: week1_Transformations.cpp  week1_example1.cpp  week1_line.cpp  week1_point.cpp  week1_teapot.cpp  week1_triangle.cpp
